--- a/contracts/bitcoin-spv-lib/Cargo.toml
+++ b/contracts/bitcoin-spv-lib/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 ckb-std = "0.6.0"
 bitcoin-spv = { git = "https://github.com/huwenchao/bitcoin-spv.git", branch = "rust-no-std", default-features = false }
 num = { version = "0.3", default-features = false, features = ["alloc"] }
+molecule = { version = "0.6", default-features = false }
 
 [profile.release]
 overflow-checks = true
